fix filter bar overlap issue on iOS

--- a/literaryHalifax/www/css/style.css
+++ b/literaryHalifax/www/css/style.css
@@ -159,7 +159,7 @@ ion-nav-view {
 }
 
 .filter-area {
-    display: grid;
+    display:flex;
 }
 
 .filter-area td {
